# RoboRTS-Edu-SLAM

./: CMakeLists.txt  README.md  package.xml
cmake_module/: FindCeres.cmake  FindCholmod.cmake  FindGflags.cmake
config/: real_robot_param.yaml  simulatin_param.yaml
launch/: base_laser_link_to_base_link_tf.launch  load_real_world_parameters.launch  roborts_slam_realworld.launch  roborts_slam_realworld_hokuyo.launch  roborts_slam_realworld_hokuyo_bag.launch  roborts_slam_realworld_rplidar.launch  roborts_slam_stage_icra.launch  roborts_slam_stage_rm.launch  roborts_slam_stage_willow.launch  roborts_slam_vrep.launch
maps/: willow-full-0.05.yaml
rviz/: rviz.rviz
scripts/: real_world_slam.sh
src/: laser_data_processor.cpp  laser_data_processor.h  param_config.h  roborts_slam_node.cpp  roborts_slam_node.h
src/map/: grid_map_base.h  grid_map_cell.h  map_manager.h  occu_grid_map.h  slam_map.h
src/pose_graph/: ceres_pose_graph_solver.cpp  ceres_pose_graph_solver.h  ceres_types.h  pose_graph.h  range_scan_pose_graph.cpp  range_scan_pose_graph.h
src/scan_match/: correlate_scan_matcher.h  optimize_scan_matcher.h  scan_matchers.h
src/slam/: sensor_data_manager.h  slam_processor.cpp  slam_processor.h
src/test/: util_test.cpp
src/util/: boundbox.h  slam_util.h  transform.h
worlds/: icra.world  rm.world  willow-pr2-5cm.world
